Fixes #88 - bottom align buttons

--- a/css/projects.css
+++ b/css/projects.css
@@ -208,10 +208,12 @@ nav .container {
 /* project card */
 
 .project {
+  position: relative;
   box-sizing: border-box;
   width:100%;
   background:#fff;
   overflow:hidden;
+  padding-bottom: calc( 15px + 1rem*1.3 );
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
@@ -233,10 +235,6 @@ nav .container {
   display: block;
 }
 
-.project-summary {
-  padding: 15px;
-}
-
 .project h2 {
   color: #E14164;
   font-size:30px;
@@ -253,6 +251,20 @@ nav .container {
   margin: 0;
 }
 
+.project .content,
+.project .project-links {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.project .content {
+  margin-top: 15px;
+}
+
+.single-project-view .project {
+  padding-bottom: 15px;
+}
+
 .single-project-view .project .btn-group {
   display: flex;
   margin-top: 20px;
@@ -262,6 +274,16 @@ nav .container {
 .single-project-view .project .btn-group .btn:not(:last-child),
 .project .action-panel :not(:last-child) {
   margin-right: 10px;
+}
+
+.project-links {
+  position: absolute;
+  bottom: 15px;
+  width: calc( 100% - 15px*2 );
+}
+
+.single-project-view .project-links {
+  position: static;
 }
 
 .project-links a {
